Release Notes - Flume - Version v0.5.0.rc

** New Feature

    . EsOutput periodically report statistics
    . engine permits plugins to register HTTP REST api callback
    . cardinality output will export/reset counters through REST

** Improvement

    . http monitoring with cmd: [ping, stat, plugins]
    . when timestamp is obviously invalid, correct it[als pkg]
    . report msg/s bytes/s

** Bug

    . occasionally, EsOutput can't get EsIndex/EsType info
      [maybe] because SkyOutput matches all and because of race condition it recyles first

----